# snippy

./: .all-contributorsrc  .gitignore  CLAUDE.md  README.md  VERSION  install.sh  installed_version.json  latest_version.json  pyproject.toml  requirements.txt  snippy.rb  snippy.spec
.github/: ISSUE_TEMPLATE
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml
Formula/: snippy.rb
hooks/: hook-click.py
snippy/: constants.py  main.py  utils.py
snippy/commands/: commit.py  config.py  update.py
snippy/utils/: animation_utils.py  emoji_utils.py  git_utils.py  io_utils.py
