[tool.poetry]
name = "snippy"
version = "2.0.0"
description = ""
authors = ["nara <me@nara.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.8"
emoji = "^2.14.0"

[tool.poetry.scripts]
snippy = "main:cli"

[tool.poetry.build]
generate-setup-file = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
